    errors.
  * minor incompatible change: the system is now aware of the types of
    variables in the COMMON-LISP package, and will signal errors for
    most violations of these type constraints (where previously they
    were silently accepted).
  * changes in type checking closed the following bugs:
    ** type checking of unused values (192b, 194d, 203);
    ** template selection based on unsafe type assertions (192c, 236);
    ** type checking in branches (194bc).
  * VALUES declaration is disabled.
  * a short form of VALUES type specifier has ANSI meaning.
  * fixed bug in DEFSTRUCT: once again, naming structure slots with
    keywords or constants is permissible.
  * STREAM-READ-SEQUENCE and STREAM-WRITE-SEQUENCE now have methods
    defined on the relevant FUNDAMENTAL-BINARY-{INPUT,OUTPUT}-STREAM
    classes.  (thanks to Antonio Martinez)
  * bug fix: APROPOS now respects the EXTERNAL-ONLY flag.  (reported
    by Teemu Kalvas)
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** NIL is now allowed as a structure slot name.
    ** arbitrary numbers, not just reals, are allowed in certain
       circumstances in LOOP for-as-arithmetic clauses.

planned incompatible changes in 0.8.x:
  * (not done yet, but planned:) When the profiling interface settles
    down, it might impact TRACE. They both encapsulate functions, and
    it's not clear yet how e.g. UNPROFILE will interact with TRACE
    and UNTRACE. (This shouldn't matter, though, unless you are using
    profiling. If you never profile anything, TRACE should continue to
    behave as before.)
  * (not done yet, but planned:) Inlining can now be controlled the
    ANSI way, without MAYBE-INLINE, since the idiom
	(DECLAIM (INLINE FOO))
	(DEFUN FOO (..) ..)
	(DECLAIM (NOTINLINE FOO))
	(DEFUN BAR (..) (FOO ..))
	(DEFUN BLETCH (..) (DECLARE (INLINE FOO)) (FOO ..))
    now does what ANSI says it should. The CMU-CL-style 
    SB-EXT:MAYBE-INLINE declaration is now deprecated and ignored.